--- a/css/contact.css
+++ b/css/contact.css
@@ -39,10 +39,8 @@
  }
 
  .contact-info {
-     display: grid;
-     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-     gap: 30px;
-     margin-bottom: 30px;
+     text-align: right;
+     color: white;
  }
 
  .contact-item {
